--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "gapi-script": "^1.2.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-textarea-autosize": "^8.3.3",
     "web-vitals": "^2.1.4"
